# elism

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  clean_build_test.sh  lexer.h  lexer.re  main.cpp  main.re  main_parser.cpp  parser.yy
doc/: assignment_checklist.md
docs/: _config.yml
docs/_includes/: navigation.html
docs/_layouts/: default.html
docs/_posts/: 2017-05-12-welcome-to-jekyll.markdown
docs/_sass/: style.scss
docs/installation/: build-on-ubuntu-16.04.md
examples/: 01a-main.bp  02-basic-syntax.bp  02-basic-syntax.bp.expect.out  03-cycles.bp  03-cycles.bp.expect.out  04-classes.bp  04-classes.bp.expect.out  05-regions.bp  05-regions.bp.expect.out  71-test-cyclecontext.bp  71-test-cyclecontext.bp.expect.out  72-test-function-class-regions.bp  72-test-function-regions.bp  72-test-function-regions.bp.expect.out  KnapsackTest.java  KnapsackTest2.java  Makefile  foo.bp  foo.bp.expect.lexer  knapsack-region.bp  knapsack-region.bp.expect.out  knapsack-regions.bp  knapsack-test.bp  knapsack.bp  knapsack.bp.expect.out  main.bp.expect.lexer  main.bp.expect.parser  main_full.bp  main_full.bp.expect.parser  syntax_test.bp
scripts/: build_test_parser.sh  clean_build_test.sh  install_local_lemon.sh  print_stats.sh
scripts/tests/: test_errors.sh  test_fine_errors.sh  test_jit.sh  test_parser.sh  test_valgrind.sh
scripts/tests/error_inputs/: assign_int_to_str.bp  assign_int_to_str.bp.expect  assign_str_to_int.bp  assign_str_to_int.bp.expect  error_regions_classes.bp
scripts/tests/error_regions/: call_arrays_one_default.bp  call_arrays_one_default.bp.expect  call_arrays_one_explicit_1.bp  call_arrays_one_explicit_1.bp.expect  call_arrays_one_explicit_2.bp  call_class_arrays.bp  call_class_arrays.bp.expect  call_classes_one_default.bp  call_classes_one_default.bp.expect  call_classes_one_explicit_1.bp  call_classes_one_explicit_1.bp.expect  call_classes_one_explicit_2.bp  call_method_one_default.bp  call_method_one_default.bp.expect  call_return_one_default.bp  call_return_one_default.bp.expect  handle_pass.bp  handle_pass.bp.expect  var_assign_arrays.bp  var_assign_arrays_1.bp  var_assign_arrays_2.bp  var_assign_arrays_2.bp.expect  var_assign_classes_1.bp.expect  var_assign_classes_2.bp  var_assign_classes_2.bp.expect
src/: CodegenContext.cpp  CodegenContext.h  lexer.h  lexer.re  main.cpp  main_jit.cpp  main_parser.cpp  parser.yy  stdlib.bp
src/ast/: ArrayTypeNode.cpp  ArrayTypeNode.h  AssignNode.cpp  AssignNode.h  BiopExpr.cpp  BiopExpr.h  ExprNode.cpp  ExprNode.h  FunctionNode.cpp  FunctionNode.h  IntValNode.cpp  IntValNode.h  LetNode.cpp  LetNode.h  NameExpr.cpp  NameExpr.h  NamedTypeNode.cpp  NamedTypeNode.h  Program.cpp  Program.h  ReturnNode.cpp  ReturnNode.h  StatementNode.cpp  StatementNode.h  TypeNode.cpp  TypeNode.h  VarNode.cpp  VarNode.h  all.h
src/ast/declarations/: ClassNode.cpp  ClassNode.h  FunctionNode.cpp  FunctionNode.h
src/ast/expressions/: ArrayExprNode.cpp  ArrayExprNode.h  BinaryOperationExprNode.cpp  BinaryOperationExprNode.h  CallExprNode.cpp  CallExprNode.h  ChildExprNode.cpp  ChildExprNode.h  ConstIntExprNode.cpp  ConstIntExprNode.h  NameExprNode.cpp  NameExprNode.h  StringExprNode.cpp  StringExprNode.h
src/ast/statements/: AssignStatementNode.cpp  AssignStatementNode.h  BlockStatementNode.cpp  BlockStatementNode.h  ExprStatementNode.cpp  ExprStatementNode.h  ForStatementNode.cpp  ForStatementNode.h  IfStatementNode.cpp  IfStatementNode.h  LetStatementNode.cpp  LetStatementNode.h  OnStatementNode.cpp  OnStatementNode.h  ReturnStatementNode.cpp  ReturnStatementNode.h  VarStatementNode.cpp  VarStatementNode.h  WhileStatementNode.cpp  WhileStatementNode.h
src/ast/types/: ArrayTypeNode.cpp  ArrayTypeNode.h  NamedTypeNode.cpp  NamedTypeNode.h
src/codegen/: ArrayType.cpp  ArrayType.h  FunctionType.cpp  FunctionType.h  IntType.cpp  IntType.h  VoidType.cpp  VoidType.h
src/rtlib/: regions.c  regions.h
tests/: test_lexer.sh
